# calendar-copilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/api/v1/: calendar.py
app/auth/api/: dependencies.py  dto.py  handler.py  router.py
app/auth/entities/: entity.py
app/auth/repository/: repository.py
app/auth/repository/schema/: user.py
app/auth/service/: auth_service.py
app/calendar_bot/api/: dependencies.py  dto.py  handler.py  router.py
app/calendar_bot/entities/: entity.py
app/calendar_bot/repository/: chat_repository.py  repository.py
app/calendar_bot/repository/schema/: calendar_credential.py  chat_conversation.py
app/calendar_bot/service/: calendar_agent.py  calendar_service.py  chat_service.py
app/middleware/: __init__.py  auth.py
conf/: config.py  config.yaml
data/: calendar_copilot.db
integration_clients/g_suite/: client.py  constants.py  exceptions.py  types.py
main_server/: container.py  main.py
pkg/auth_token_client/: client.py
pkg/db_util/: declarative_base.py  sql_lite_conn.py
pkg/llm/: client.py  prompts.py
pkg/log/: logger.py
